templates/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: default
spec:
  hosts:
    - "192.168.1.16.nip.io"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            exact: "/metrics/prometheus"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: helmchart-my-app-chart-prometheus.default.svc.cluster.local
            port:
              number: 9090
